# openapi/spec.yaml
@@ -2,7 +2,7 @@
 swagger: "2.0"
 info:
   description: "Adherent api\n"
-  version: "1.0.9"
+  version: "1.0.10"
   title: "Adherent"
   license:
     name: "Apache 2.0"
@@ -77,7 +77,7 @@ paths:
     get:
       tags:
       - "member"
-      summary: "Retrieve an member"
+      summary: "Retrieve"
       operationId: "get_member"
       produces:
       - "application/json"
@@ -100,7 +100,7 @@ paths:
     put:
       tags:
       - "member"
-      summary: "Update/create an member"
+      summary: "Update/create"
       operationId: "put_member"
       produces:
       - "application/json"
@@ -128,7 +128,7 @@ paths:
     patch:
       tags:
       - "member"
-      summary: "Partially update an member"
+      summary: "Partially update"
       operationId: "patch_member"
       produces:
       - "application/json"
@@ -157,7 +157,7 @@ paths:
     delete:
       tags:
       - "member"
-      summary: "Delete an member"
+      summary: "Delete"
       operationId: "delete_member"
       produces:
       - "application/json"
@@ -179,7 +179,7 @@ paths:
     put:
       tags:
       - "member"
-      summary: "Update an member's password"
+      summary: "Update password"
       operationId: "update_password"
       produces:
       - "application/json"
@@ -204,6 +204,33 @@ paths:
       responses:
           204:
             description: "Modified"
+          404:
+            description: "Not found"
+      x-swagger-router-controller: "adh.controller.member"
+      security:
+        - oauth2: ["profile"]
+  /member/{username}/logs/:
+    get:
+      tags:
+      - "member"
+      summary: "Get the most recent logs"
+      operationId: "get_logs"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "username"
+        in: "path"
+        description: "username of the member"
+        required: true
+        type: "string"
+      responses:
+          200:
+            description: "Success"
+            schema:
+              type: "array"
+              items:
+                type: string
+                example: "2018-07-14T04:44:51.537Z Password OK"
           404:
             description: "Not found"
       x-swagger-router-controller: "adh.controller.member"
@@ -1074,4 +1101,3 @@ definitions:
 externalDocs:
   description: "Find out more about MiNET"
   url: "http://minet.net"
-
